--- a/05211940000037_biodata.html
+++ b/05211940000037_biodata.html
@@ -17,7 +17,7 @@
             <div class="col-11">
                 <div class="row">
                     <div class="col-12">
-                        <img src="C:\Users\user\Documents\GitHub\PWEBC\images\myprofile.jpg" height="400" width="1110">
+                        <img src="images\myprofile.jpg" height="400" width="1110">
                     </div>
                 </div>
                 <div class="row">
@@ -53,7 +53,7 @@
                 <div class="col-sm-5">
                     <h2>[ About Me ]</h2>
                     <h5>Photo of me:</h5>
-                        <img src="C:\Users\user\Documents\GitHub\PWEBC\images/aboutme.jpg" height="530" width="425">
+                        <img src="images/aboutme.jpg" height="530" width="425">
                         
                         <p>Hallo gaiiss kenalin namaku Ramadhani Galuh Candra Purtiwi. Biasanya sih dipanggil Galuh hehe. 
                             Aku lahir di Ponorogo, tanggal 17 Desember 2000.
@@ -91,7 +91,7 @@
                           <div class="col-sm-7">
                             <h2>>> MENARI</h2>
                             <h5>Photo :</h5>
-                            <img src="C:\Users\user\Documents\GitHub\PWEBC\images/menari.jpg" height="398" width="625">
+                            <img src="images/menari.jpg" height="398" width="625">
                             <p>Menari Tradisional adalah salah satu hal yang aku sukai. Selain untuk melestarikan kebudayaan Indonesia, dengan menari
                               aku bisa mengekspresikan diriku. Di ITS aku mengikuti UKM UKTK Tari Tradisional. Foto di atas adalah salah satu fotoku menari saat acara peingatan Dies Natalies ITS.
                               Saat itu grup tari UKTK ITS berkolaborasi dengan anak PSM untuk menyuguhkan hiburan di acara Dies Natalies. Pengalaman yang 
@@ -102,7 +102,7 @@
                             <br>
                             <h2>>> MERIAS</h2>
                             <h5>Photo :</h5>
-                            <img src="C:\Users\user\Documents\GitHub\PWEBC\images/merias.jpg" height="360" width="625">
+                            <img src="\images/merias.jpg" height="360" width="625">
                             <p>Nah kalo hobi aku yang satu ini dimulai aku SMA. Sebenernya sebelum itu aku juga udah belajar make up wajah Aku
                               sendiri dan cuma iseng-iseng aja. Saat aku lulus SMA, karena libur panjang, aku memutuskan untuk membuka jasa 
                               makeup untuk acara foto album, wisuda, prewedding, dan acara lainnya dan membuat akun instagram (@kenes_ayuu). 
