--- a/05211940000037_biodata.html
+++ b/05211940000037_biodata.html
@@ -102,7 +102,7 @@
                             <br>
                             <h2>>> MERIAS</h2>
                             <h5>Photo :</h5>
-                            <img src="\images/merias.jpg" height="360" width="625">
+                            <img src="images/merias.jpg" height="360" width="625">
                             <p>Nah kalo hobi aku yang satu ini dimulai aku SMA. Sebenernya sebelum itu aku juga udah belajar make up wajah Aku
                               sendiri dan cuma iseng-iseng aja. Saat aku lulus SMA, karena libur panjang, aku memutuskan untuk membuka jasa 
                               makeup untuk acara foto album, wisuda, prewedding, dan acara lainnya dan membuat akun instagram (@kenes_ayuu). 
